fixed portfolio scroll overlap

--- a/src/AboutContainer/styles.css
+++ b/src/AboutContainer/styles.css
@@ -1,6 +1,3 @@
-
-
-.about-back {
-		/*background-image: url("https://mdbootstrap.com/img/Photos/Others/gradient1.jpg");*/
-
+div.col {
+	padding: 0px;
 }
