--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,4 @@
-body {
-  color: black;
-}
+
 .header {
   font-size: 20px;
   font-weight: bold;
