--- a/src/TeamComponent/styles.css
+++ b/src/TeamComponent/styles.css
@@ -1,5 +1,7 @@
 .grey-text {
 	font-size: 12px;
+	padding: 20px;
+	display: inline-block;
 
 }
 .teamCardBody {
@@ -11,7 +13,7 @@
 }
 .team-body {
 	display: inline-block;
-	padding: 50px;
+	padding: 0px;
 }
 .column1 {
 	/*border: 1px solid black;*/
